--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title> testing</title>
   </head>
   <body>
-    <h1> Testing </h1>
+    <h1> Testing 123 </h1>
   </body>
 </html>
